@@ -42,7 +42,7 @@ testMM(void)
     int *r = (int *)i;
     r=r-1;  // is this free of UB?
     *r=11;  // and this?
-    ASSERT (*p == *r);
+    ASSERT (x == *r);
     ASSERT (x == 11);
   }
 #endif
